@@ -212,7 +212,8 @@ $classArray = array(
     't3lib_utility_Http' => \TYPO3\CMS\Core\Utility\HttpUtility::class,
     't3lib_utility_Mail' => \TYPO3\CMS\Core\Utility\MailUtility::class,
     't3lib_utility_Math' => \TYPO3\CMS\Core\Utility\MathUtility::class,
-    't3lib_utility_Monitor' => \TYPO3\CMS\Core\Utility\MonitorUtility::class,
+    't3lib_utility_Monitor' => \JambageCom\MigrationsCore\Utility\MonitorUtility::class,
+    'TYPO3\\CMS\\Core\\Utility\\MonitorUtility' => \JambageCom\MigrationsCore\Utility\MonitorUtility::class,   
     't3lib_utility_Path' => \TYPO3\CMS\Core\Utility\PathUtility::class,
     't3lib_utility_PhpOptions' => \TYPO3\CMS\Core\Utility\PhpOptionsUtility::class,
     't3lib_utility_VersionNumber' => \TYPO3\CMS\Core\Utility\VersionNumberUtility::class,
