@@ -29,6 +29,11 @@
     "php": ">=5.5.0,<=7.99.99",
     "typo3/cms-core": ">=8.7.0,<8.99.99"
   },
+  "autoload": {
+    "psr-4": {
+      "JambageCom\\MigrationsCore\\": "Classes"
+    }
+  },
   "replace": {
     "migration_core": "self.version",
     "typo3-ter/migration-core": "self.version"
