@@ -10,7 +10,7 @@ $EM_CONF[$_EXTKEY] = array (
   'description' => 'This extension provides the migration classes needed for TYPO3 8.x like t3lib_div, t3lib_extMgm, tslib_pibase and all others. This provides backwards compatibility to TYPO3 4.5 - 6.1',
   'category' => 'misc',
   'shy' => 0,
-  'version' => '0.1.2',
+  'version' => '0.1.3',
   'dependencies' => '',
   'conflicts' => '',
   'suggests' => '',
