@@ -1,3 +1,6 @@
+2018-07-02 Franz Holzinger  <franz@ttproducts.de>
+    * add a replacement copy for the TYPO3 8.x missing class \TYPO3\CMS\Core\Utility\MonitorUtility
+
 2018-05-09 Franz Holzinger  <franz@ttproducts.de>
     * remove the autoload part from the composer file because this extension has no PHP classes by itself
 
